--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Browser based Switches",
   "main": "index.js",
   "scripts": {
-    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --progress --colors --mode development",
+    "start": "webpack-cli serve --mode development",
     "test": "npm start",
-    "webpack": "node ./node_modules/webpack/bin/webpack.js --mode production"
+    "webpack": "webpack-cli build --mode production"
   },
   "repository": {
     "type": "git",
@@ -19,27 +19,26 @@
   },
   "homepage": "https://github.com/neopoly/switches",
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.5",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "chai": "^4.2.0",
-    "cheerio": "^1.0.0-rc.3",
-    "css-loader": "^2.1.1",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0",
-    "file-loader": "^3.0.1",
-    "mocha": "^6.1.4",
-    "mocha-loader": "^2.0.1",
-    "node-sass": "^4.12.0",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1",
-    "webpack": "^4.33.0",
-    "webpack-cli": "^3.3.4",
-    "webpack-dev-server": "3.5.1"
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.7",
+    "@babel/preset-react": "^7.14.5",
+    "@webpack-cli/init": "^1.1.3",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
+    "babel-loader": "^8.2.2",
+    "chai": "^4.3.4",
+    "css-loader": "^6.0.0",
+    "enzyme": "^3.11.0",
+    "file-loader": "^6.2.0",
+    "mocha": "^9.0.2",
+    "mocha-loader": "^5.1.5",
+    "sass": "^1.35.2",
+    "sass-loader": "^12.1.0",
+    "webpack": "^5.44.0",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
